// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField computed :: fieldProps :: should return field props 1`] = `
Object {
  "input-type": "text",
  "label-text": "First Name",
  "max-length": null,
  "name": "first-name",
  "value": "",
}
`;

exports[`FormField computed :: fieldProps :: when field has error :: should return field props with error props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-invalid": true,
  "aria-label": null,
  "has-error": true,
  "input-type": "text",
  "label-text": "First Name",
  "max-length": null,
  "name": "first-name",
  "value": "",
}
`;

exports[`FormField computed :: translations :: should return translations from with id names 1`] = `
Object {
  "emptyError": "error-first-name-empty",
  "errorName": "first-name-error",
  "invalidError": "error-first-name-invalid",
  "label": "First Name",
  "name": "first-name",
  "validationMessages": Object {
    "required": "Enter First Name",
  },
}
`;
